# PracticeHelper

./: .env.example  .gitignore  .golangci.yml  Makefile  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml
sidecar/: pyproject.toml
sidecar/app/: __init__.py  agent_runtime.py  agent_tools.py  config.py  go_client.py  heuristics.py  langgraph_flows.py  llm_client.py  main.py  prompt_loader.py  repo_context.py  runtime_prompts.py  runtime_support.py  schema_common.py  schema_memory.py  schema_runtime.py  schemas.py
sidecar/app/adapters/: __init__.py  llm_client.py
sidecar/app/flows/: __init__.py  langgraph.py
sidecar/app/prompts/: __init__.py  analyze_job_target_system.md  analyze_repo_system.md  bundles.py  evaluate_answer_system.md  generate_question_system.md  generate_review_system.md  loader.py  registry.json
sidecar/app/repo_analysis/: __init__.py  context.py
sidecar/app/runtime/: __init__.py  engine.py  facade.py  single_shot.py  specs.py  state.py  streaming.py  trace.py  validation.py
sidecar/app/runtime_tools/: __init__.py  actions.py  builders.py  commands.py  prepared.py  readers.py
sidecar/app/schemas/: __init__.py  common.py  memory.py  runtime.py
sidecar/app/shared/: __init__.py  compaction.py  tooling.py
sidecar/tests/: runtime_test_support.py  test_agent_runtime.py  test_go_client.py  test_heuristics.py  test_llm_client.py  test_main_streaming.py  test_prompt_versioning.py  test_repo_context.py  test_runtime_commands.py  test_runtime_loop.py  test_runtime_streaming.py  test_runtime_tasks.py  test_runtime_validation.py
(+242 files in other folders)
